# bridge-scrims-bot

./: .env.example  .gitignore  Cargo.toml  Config.example.toml  Config.toml  Dockerfile  LICENSE  README.md  cargo.toml  prefabs.json  test.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  deploy.yml  rust.yml  tests.yml
.sqlx/: query-032d7eb5f616e24792b60e625591bb53f45907fb5921f1fde269d66cbbaf9196.json  query-12e1d7a9176028df05ecd4dfd1d1163237d0f58d380aa0b1107badafd028a4f5.json  query-133ba24a799542b9b792d6ab5b19dcae9bca54c92ef752e83f6f2e817dfb3a45.json  query-234434e3a985a8afa4d71d316b72614ee6c4a126bb32eea6bbd865c96abbbf45.json  query-27540a0fde83b97657c3e9a3c82cdce05b8eab713f60db593872858f72d6687a.json  query-35cc704a2dd9dc58dd6cbcf1ee1bb804fb9d1f5f5e00b62e4d7de93de4917a54.json  query-550d0343b80b14456b089806a5bed91675f571d7ef35dea5e3656f8669e65fc0.json  query-60b7da972dbbae22899b2b89317a6bcdf3a079e494c4e7d9234f3bb0ba47d682.json  query-6d93739dd02da32347e8d47442e39965c92338ea7865799228d93ce3a1d9902b.json  query-786961d3dd71a101df236653f90caee4d2a2e2766b9ab11cca920f62c835cd5b.json  query-7919ac1be173f7bbf8eba455f32358d5640ef42f48fbfe33528f36cd16993b5a.json  query-970761c71a083a29379b3ba95add6058b2c2e2423b6b677b4d93a4fe27f1b8d5.json  query-993a9be41d86f7c6f727f477557a58e049513291e8656d50903e8704cab6c54d.json  query-9b7691c11b2f31fb05db09ff7183ce5292a09a51f9f3cbab8fcc81d45ed405eb.json  query-9c18ed08cbc691fc29e862f12e91e5be654c7a2c1388aa0fd7ca007f8f2a3cb9.json  query-a9138b74df1b5e5ad1639dff5656003ef1de76fb1bd21122e3470790924c6690.json  query-aab5f9a2896fa629020c90675caa31903ac615bb094dbb7c9de36033a348a994.json  query-ad5b26124a8af3bc8e015fcd36f93bc2966188e35b5913f67107b60daad325e4.json  query-afc6c3ee2941d46db619c1bdf5b272cf91574585557e128c0c894b62ab9e4714.json  query-b48ffff5d3e64ed44d2a26ff3e4b1edfc76954fb6c6057ddeeca53174daa65a4.json  query-b5a70e71b398fff03a09dfd9ee85bf3a000995b482813db3d67318b3496a68d2.json  query-cd3ae6fa9d3fea024a8f40e9ec07d084bcc4bafe4cb715b6b7fc63d76a4895f3.json  query-d5b61c01e1125b01c92ab40fbf7d07901d6edf491e8b3ba9d31a1355641a57e1.json  query-e5d0bdf5249aa53c682bcfc2e97b10a743821547c6b51f74965b91b40f521508.json  query-fd58fa71bcb9afc7f8dec608222c285719fac6079cbeae427896bbd2473f88ad.json
migrations/: 20230718021920_bridge-scrims.sql
src/: consts.rs  cooldown.rs  db.rs  handler.rs  interact_opts.rs  lib.rs  macros.rs  main.rs  model.rs  prefabs.json
src/commands/: ban.rs  captains.rs  close.rs  council.rs  freeze.rs  list_bans.rs  logtime.rs  mod.rs  notes.rs  ping.rs  (+13 more)
(+24 files in other folders)
