[package]
edition = "2021"
name = "bridge-scrims"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
dotenv = "0.15.0"
serde = "1.0.117"
tracing = "0.1.29"
tracing-subscriber = "0.3.1"

lazy_static = "1.4.0"
sqlite = "0.26.0"
dirs = "4.0.0"
serde_json = "1.0.71"

[dependencies.time]
version = "0.3.5"
features = ["local-offset"]

[dependencies.serenity]
default-features = false
features = ["builder", "cache", "client", "gateway", "model", "http", "utils", "unstable_discord_api", "rustls_backend"]
version = "0.10.9"

[dependencies.tokio]
features = ["full"]
version = "1.13.0"
